# seminario3_inf284

./: .gitignore  CMakeLists.txt  LICENSE  README.md  relatorio_final.tex
instances/: 2e3c.json  3e4c.json  3e8c.json  4e4c.json  5e9c.json  6e7c.json  7e9c.json  8e9c.json  b3.json  binance.json  binance_deribit_okx.json  binance_deribit_okx_nyse_b3.json  config.json  deribit.json  mb.json  nyse.json  nyse_b3.json  okx.json  results.csv
src/: Genetic.h  algorithms.h  argh.h  computer.cpp  computer.h  instance.cpp  instance.h  main.cpp  market.cpp  market.h  solution.cpp  solution.h
